--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -993,6 +993,14 @@ fieldset .note {
     padding: 0;
     outline: none;
 }
+.panel-heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    border: 1px solid #dee2e6;
+    border-radius: 10px;
+}
 
 .panel-collapse {
     margin: 0 auto;
@@ -1015,7 +1023,6 @@ fieldset .note {
 }
 .panel-collapse table {
     width: 80%;
-    margin: auto;
-    background-color: rgba(250, 250, 250, 0.83);
+    margin: 20px auto 0 auto;
     border: 1px solid rgb(227, 227, 227);
 }
