--- a/project/src/main/resources/templates/addSchoolYear.html
+++ b/project/src/main/resources/templates/addSchoolYear.html
@@ -30,16 +30,21 @@
                 <fieldset>
                     <p class="note">(<span class="text-red">*</span>) Bắt buộc </p>
                     <div class="form-group text-left">
-                        <label for="schoolYearName">Tên năm học <span class="text-red">*</span></label>
-                        <input type="text" class="form-control" id="schoolYearName" placeholder="2019-2020">
+                        <label for="fromYear">Năm học <span class="text-red">*</span></label>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <input type="number" min="2019" class="form-control col-md-5" id="fromYear" value="2020">
+                            <span>-</span>
+                            <input type="number" class="form-control col-md-5" id="toYear" th:value="${2020+1}"
+                                   disabled>
+                        </div>
                     </div>
                     <div class="form-group text-left">
-                        <label for="fromDate">Ngày bắt đầu năm học <span class="text-red">*</span></label>
-                        <input type="date" class="form-control" id="fromDate">
-                    </div>
-                    <div class="form-group text-left">
-                        <label for="toDate">Ngày kết thúc năm học <span class="text-red">*</span></label>
-                        <input type="date" class="form-control" id="toDate">
+                        <label for="fromDate">Thời gian <span class="text-red">*</span></label>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <input type="date" class="form-control col-md-5" id="fromDate">
+                            <span>-</span>
+                            <input type="date" class="form-control col-md-5" id="toDate">
+                        </div>
                     </div>
                     <div class="error addSchoolYear-err text-left"></div>
                     <input type="button" name="submit" id="submit" class="submit action-button" value="TẠO"/>
