--- a/project/src/main/resources/templates/violationList.html
+++ b/project/src/main/resources/templates/violationList.html
@@ -36,47 +36,37 @@
                 </a>
             </div>
         </div>
-        <table class="table table-hover">
-            <thead>
-            <tr class="align-items-center">
-                <th colspan="2">Nội quy theo dõi</th>
-                <th class="text-left">Điểm</th>
-                <th></th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody class="panel panel-default">
-            <tr class="panel-heading" data-toggle="collapse" data-target="#collapseOne">
-                <td colspan="2">15 phút truy bài đầu giờ</td>
-                <td class="text-left">3</td>
-                <td>
-                    <span class="bt-table-field">
+        <div class="panel panel-default">
+            <div class="panel-heading mt-3" data-toggle="collapse" data-target="#collapseOne" onclick="toggleClick()">
+                <div>
+                    <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài đầu giờ</div>
+                    <div class="d-flex align-items-center"><h6 class="my-0 mr-2">Điểm trừ:</h6> 3</div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                    <span class="bt-table-field mx-5">
                         <a href="#" class="bt-table-edit" title="Sửa">
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                         </a>
                     </span>
-                </td>
-                <td>
                     <button><i class="fa fa-chevron-down rotate"></i></button>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="5" class="panel-collapse">
-                    <table class="table my-0 collapse in" id="collapseOne">
-                        <thead>
-                        <th style="width: 10%"></th>
-                        <th>Vi phạm</th>
-                        <th>Điểm trừ</th>
-                        <th></th>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th style="width: 10%"></th>
-                            <td>
-                                Đi lại lộn xộn, làm việc riêng, ăn quà
-                            </td>
-                            <td>0.2</td>
-                            <td><span>
+                </div>
+            </div>
+            <div class="panel-collapse collapse in" id="collapseOne">
+                <table class="table table-hover">
+                    <thead>
+                    <th style="width: 5%"></th>
+                    <th>Vi phạm</th>
+                    <th>Điểm trừ</th>
+                    <th></th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th style="width: 5%"></th>
+                        <td>
+                            Đi lại lộn xộn, làm việc riêng, ăn quà
+                        </td>
+                        <td>0.2</td>
+                        <td><span>
                                 <a href="#" title="Sửa" class="mx-2">
                                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                                 </a>
@@ -84,14 +74,14 @@
                                     <i class="fa fa-trash" aria-hidden="true"></i>
                                 </a>
                             </span></td>
-                        </tr>
-                        <tr>
-                            <th style="width: 10%"></th>
-                            <td>
-                                Mỗi ĐVTN không hát quốc ca, tập trung muộn
-                            </td>
-                            <td>0.2</td>
-                            <td><span>
+                    </tr>
+                    <tr>
+                        <th style="width: 5%"></th>
+                        <td>
+                            Mỗi ĐVTN không hát quốc ca, tập trung muộn
+                        </td>
+                        <td>0.2</td>
+                        <td><span>
                                 <a href="#" title="Sửa" class="mx-2">
                                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                                 </a>
@@ -99,14 +89,14 @@
                                     <i class="fa fa-trash" aria-hidden="true"></i>
                                 </a>
                             </span></td>
-                        </tr>
-                        <tr>
-                            <th style="width: 10%"></th>
-                            <td>
-                                Mở cửa lớp muộn
-                            </td>
-                            <td>1</td>
-                            <td><span>
+                    </tr>
+                    <tr>
+                        <th style="width: 5%"></th>
+                        <td>
+                            Mở cửa lớp muộn
+                        </td>
+                        <td>1</td>
+                        <td><span>
                                 <a href="#" title="Sửa" class="mx-2">
                                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                                 </a>
@@ -114,15 +104,155 @@
                                     <i class="fa fa-trash" aria-hidden="true"></i>
                                 </a>
                             </span></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
 
+            <div class="panel-heading mt-3" data-toggle="collapse" data-target="#collapseTwo" onclick="toggleClick()">
+                <div>
+                    <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài đầu giờ</div>
+                    <div class="d-flex align-items-center"><h6 class="my-0 mr-2">Điểm trừ:</h6> 3</div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                    <span class="bt-table-field mx-5">
+                        <a href="#" class="bt-table-edit" title="Sửa">
+                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                        </a>
+                    </span>
+                    <button><i class="fa fa-chevron-down rotate"></i></button>
+                </div>
+            </div>
+            <div class="panel-collapse collapse in" id="collapseTwo">
+                <table class="table table-hover">
+                    <thead>
+                    <th style="width: 5%"></th>
+                    <th>Vi phạm</th>
+                    <th>Điểm trừ</th>
+                    <th></th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th style="width: 5%"></th>
+                        <td>
+                            Đi lại lộn xộn, làm việc riêng, ăn quà
+                        </td>
+                        <td>0.2</td>
+                        <td><span>
+                                <a href="#" title="Sửa" class="mx-2">
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                </a>
+                                <a href="#" title="Xóa" class="mx-2">
+                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                </a>
+                            </span></td>
+                    </tr>
+                    <tr>
+                        <th style="width: 5%"></th>
+                        <td>
+                            Mỗi ĐVTN không hát quốc ca, tập trung muộn
+                        </td>
+                        <td>0.2</td>
+                        <td><span>
+                                <a href="#" title="Sửa" class="mx-2">
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                </a>
+                                <a href="#" title="Xóa" class="mx-2">
+                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                </a>
+                            </span></td>
+                    </tr>
+                    <tr>
+                        <th style="width: 5%"></th>
+                        <td>
+                            Mở cửa lớp muộn
+                        </td>
+                        <td>1</td>
+                        <td><span>
+                                <a href="#" title="Sửa" class="mx-2">
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                </a>
+                                <a href="#" title="Xóa" class="mx-2">
+                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                </a>
+                            </span></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
 
-            </tbody>
-        </table>
+            <div class="panel-heading mt-3" data-toggle="collapse" data-target="#collapseThree" onclick="toggleClick()">
+                <div>
+                    <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài đầu giờ</div>
+                    <div class="d-flex align-items-center"><h6 class="my-0 mr-2">Điểm trừ:</h6> 3</div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                    <span class="bt-table-field mx-5">
+                        <a href="#" class="bt-table-edit" title="Sửa">
+                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                        </a>
+                    </span>
+                    <button><i class="fa fa-chevron-down rotate"></i></button>
+                </div>
+            </div>
+            <div class="panel-collapse collapse in" id="collapseThree">
+                <table class="table table-hover">
+                    <thead>
+                    <th style="width: 5%"></th>
+                    <th>Vi phạm</th>
+                    <th>Điểm trừ</th>
+                    <th></th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th style="width: 5%"></th>
+                        <td>
+                            Đi lại lộn xộn, làm việc riêng, ăn quà
+                        </td>
+                        <td>0.2</td>
+                        <td><span>
+                                <a href="#" title="Sửa" class="mx-2">
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                </a>
+                                <a href="#" title="Xóa" class="mx-2">
+                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                </a>
+                            </span></td>
+                    </tr>
+                    <tr>
+                        <th style="width: 5%"></th>
+                        <td>
+                            Mỗi ĐVTN không hát quốc ca, tập trung muộn
+                        </td>
+                        <td>0.2</td>
+                        <td><span>
+                                <a href="#" title="Sửa" class="mx-2">
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                </a>
+                                <a href="#" title="Xóa" class="mx-2">
+                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                </a>
+                            </span></td>
+                    </tr>
+                    <tr>
+                        <th style="width: 5%"></th>
+                        <td>
+                            Mở cửa lớp muộn
+                        </td>
+                        <td>1</td>
+                        <td><span>
+                                <a href="#" title="Sửa" class="mx-2">
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                </a>
+                                <a href="#" title="Xóa" class="mx-2">
+                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                </a>
+                            </span></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
         <div class="table-paging">
         </div>
     </div>
