--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -993,6 +993,7 @@ fieldset .note {
     padding: 0;
     outline: none;
 }
+
 .panel-heading {
     display: flex;
     justify-content: space-between;
@@ -1004,7 +1005,7 @@ fieldset .note {
 
 .panel-collapse {
     margin: 0 auto;
-    padding: 0!important;
+    padding: 0 !important;
 }
 
 .rotate {
@@ -1018,11 +1019,186 @@ fieldset .note {
 .panel-collapse table.show {
     display: table !important;
 }
-.panel-collapse:hover{
+
+.panel-collapse:hover {
     background: #FFFFFF;
 }
+
 .panel-collapse table {
     width: 80%;
     margin: 20px auto 0 auto;
     border: 1px solid rgb(227, 227, 227);
+}
+
+.quantity button, .quantity a {
+    outline: none;
+    cursor: pointer;
+    font-size: .875rem;
+    transition: background-color .1s cubic-bezier(.4, 0, .6, 1);
+    border: 1px solid rgba(0, 0, 0, .09);
+    border-radius: 2px;
+    background: transparent;
+    color: rgba(0, 0, 0, .8);
+    width: 32px;
+    height: 32px;
+}
+
+.quantity a {
+    text-align: center;
+    padding: 5px;
+}
+
+.quantity-input {
+    width: 50px;
+    height: 32px;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    cursor: text;
+    outline: none;
+    transition: background-color .1s cubic-bezier(.4, 0, .6, 1);
+    border: 1px solid rgba(0, 0, 0, .09);
+    background: transparent;
+    color: rgba(0, 0, 0, .8);
+}
+
+/* Global "table" column settings */
+.column-labels {
+    display: flex;
+    margin-bottom: 12px;
+    color: #888;
+    font-size: 1.1rem;
+}
+
+.violation-date {
+    width: 15%;
+    font-weight: 500;
+}
+
+.violation-details {
+    width: 40%;
+}
+
+.violation-substract-grade,
+.violation-quantity,
+.violation-total,
+.violation-action {
+    width: 11.3%;
+    text-align: center;
+}
+
+.violation-description {
+    display: flex;
+}
+
+.violation-name {
+    font-weight: 500;
+}
+
+.totals .totals-item {
+    float: right;
+    clear: both;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.totals .totals-item label {
+    float: left;
+    width: 79%;
+    text-align: right;
+    font-weight: 500;
+}
+
+.totals .totals-item .totals-value {
+    float: right;
+    width: 21%;
+    text-align: right;
+}
+
+@media screen and (max-width: 650px) {
+    .column-labels {
+        display: none;
+    }
+
+    .violation-description {
+        margin-bottom: 20px;
+        padding-bottom: 10px;
+        border-bottom: 1px solid #eee;
+        display: table;
+        width: 100%;
+        position: relative;
+    }
+
+    .violation-date {
+        width: 100%;
+        font-size: 1.2rem;
+    }
+
+    .violation-details {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .violation-substract-grade, .violation-quantity {
+        width: auto;
+        display: inline-block;
+        margin: 0 10px;
+    }
+
+    .violation-substract-grade:before {
+        content: 'Điểm trừ: ';
+        font-weight: 500;
+    }
+
+    .violation-quantity:before {
+        content: 'Số lượng: ';
+        font-weight: 500;
+    }
+
+    .violation-total {
+        width: auto;
+        text-align: left;
+        margin: 10px 0 0 10px;
+    }
+
+    .violation-total:before {
+        content: 'Tổng điểm trừ: ';
+        font-weight: 500;
+    }
+
+    .violation-action {
+        position: absolute;
+        top: 40%;
+        right: 0;
+        width: auto;
+    }
+}
+
+.modal-body .panel-title {
+    font-size: 1.2rem;
+    margin: 20px;
+    margin-bottom: 0;
+    padding: 10px;
+    background: #f5f5f5;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-weight: 500;
+}
+
+.modal-body .panel-body {
+    border: 1px solid #ddd;
+    width: 80%;
+    margin: auto;
+    padding: 15px;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 30px;
+}
+
+.modal-body .panel-body .title {
+    font-weight: 500;
+}
+
+.font-500{
+    font-weight: 500;
 }
