--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -59,6 +59,12 @@
     <div><a th:href="@{addSchoolYear}">Thêm năm học mới</a></div>
     <div><a th:href="@{editSchoolYear}">Sửa thông tin năm học</a></div>
     <br>
+    <h2>Module 7: Trực tuần</h2>
+    <div><a th:href="@{assignWeekly}">Xem phân công trực tuần</a></div>
+    <div><a th:href="@{gradingToEmulation}">Chấm điểm thi đua</a></div>
+    <div><a th:href="@{violationListOfClass}">Xem danh sách lỗi theo ngày</a></div>
+    <div><a th:href="@{addNewViolation}">Thêm vi phạm mới</a></div>
+    <br>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
 <div class="modal-loading"></div>
