--- a/project/src/main/resources/templates/manageTimetable.html
+++ b/project/src/main/resources/templates/manageTimetable.html
@@ -60,6 +60,7 @@
         <div class="modal-content">
             <form>
                 <div class="modal-body text-center">
+                    <img class="mb-3 mt-3" src="https://img.icons8.com/flat_round/100/000000/error--v1.png"/>
                     <h5>Ngày áp dụng của Thời khóa biểu đã tồn tại.</h5>
                     <h5>Thời khóa biểu này sẽ bị ghi đè lên thời khóa biểu trước đó.</h5>
                     <h5>Bạn có muốn ghi đè không?</h5>
