--- a/project/src/main/resources/templates/violationList.html
+++ b/project/src/main/resources/templates/violationList.html
@@ -36,7 +36,7 @@
                 </a>
             </div>
         </div>
-        <div class="panel panel-default">
+        <div class="panel panel-default" id="violationList">
             <div class="panel-heading mt-3" data-toggle="collapse" data-target="#collapseOne" onclick="toggleClick()">
                 <div>
                     <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài đầu giờ</div>
@@ -66,36 +66,6 @@
                             Đi lại lộn xộn, làm việc riêng, ăn quà
                         </td>
                         <td>0.2</td>
-                        <td><span>
-                                <a href="#" title="Sửa" class="mx-2">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                </a>
-                                <a href="#" title="Xóa" class="mx-2">
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </a>
-                            </span></td>
-                    </tr>
-                    <tr>
-                        <th style="width: 5%"></th>
-                        <td>
-                            Mỗi ĐVTN không hát quốc ca, tập trung muộn
-                        </td>
-                        <td>0.2</td>
-                        <td><span>
-                                <a href="#" title="Sửa" class="mx-2">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                </a>
-                                <a href="#" title="Xóa" class="mx-2">
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </a>
-                            </span></td>
-                    </tr>
-                    <tr>
-                        <th style="width: 5%"></th>
-                        <td>
-                            Mở cửa lớp muộn
-                        </td>
-                        <td>1</td>
                         <td><span>
                                 <a href="#" title="Sửa" class="mx-2">
                                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
