kimpt142 commit manage violation 07/07

--- a/project/src/main/resources/templates/addViolation.html
+++ b/project/src/main/resources/templates/addViolation.html
@@ -57,7 +57,7 @@
             <div class="modal-body text-center">
             </div>
             <div class="modal-footer">
-                <input type="button" id="closeDialog" class="btn btn-primary" value="ĐÓNG"/>
+                <a type="button" id="closeDialog" class="btn btn-primary" th:href="@{violationList}">ĐÓNG</a>
             </div>
         </div>
     </div>
