--- a/project/src/main/resources/templates/violationList.html
+++ b/project/src/main/resources/templates/violationList.html
@@ -39,14 +39,21 @@
         <div class="panel panel-default">
             <div class="panel-heading mt-3" data-toggle="collapse" data-target="#collapseOne" onclick="toggleClick()">
                 <div>
-                    <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài đầu giờ</div>
-                    <div class="d-flex align-items-center"><h6 class="my-0 mr-2">Điểm trừ:</h6> 3</div>
+                    <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài
+                        đầu giờ
+                    </div>
+                    <div class="d-flex align-items-center"><h6 class="my-0 mr-2">Điểm:</h6> 3</div>
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
-                    <span class="bt-table-field mx-5">
+                    <span class="bt-table-field mx-2">
                         <a href="#" class="bt-table-edit" title="Sửa">
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                         </a>
+                    </span>
+                    <span class="bt-table-field mr-5">
+                    <a href="#" title="Xóa" class="mx-2">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                    </a>
                     </span>
                     <button><i class="fa fa-chevron-down rotate"></i></button>
                 </div>
@@ -111,7 +118,9 @@
 
             <div class="panel-heading mt-3" data-toggle="collapse" data-target="#collapseTwo" onclick="toggleClick()">
                 <div>
-                    <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài đầu giờ</div>
+                    <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài
+                        đầu giờ
+                    </div>
                     <div class="d-flex align-items-center"><h6 class="my-0 mr-2">Điểm trừ:</h6> 3</div>
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
@@ -183,7 +192,9 @@
 
             <div class="panel-heading mt-3" data-toggle="collapse" data-target="#collapseThree" onclick="toggleClick()">
                 <div>
-                    <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài đầu giờ</div>
+                    <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài
+                        đầu giờ
+                    </div>
                     <div class="d-flex align-items-center"><h6 class="my-0 mr-2">Điểm trừ:</h6> 3</div>
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
