create template for module 8 + module 9

--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -65,6 +65,17 @@
     <div><a th:href="@{violationListOfClass}">Xem danh sách lỗi theo ngày</a></div>
     <div><a th:href="@{addNewViolation}">Thêm vi phạm mới</a></div>
     <br>
+    <h2>Module 8: Quản lý thời gian</h2>
+    <div><a th:href="@{manageViolationEnteringTime}">Xem thời gian thực thi chấm điểm</a></div>
+    <div><a th:href="@{createViolationEnteringTime}">Thêm thời gian chấm</a></div>
+    <div><a th:href="@{editViolationEnteringTime}">Sửa thời gian chấm</a></div>
+    <br>
+    <h2>Module 9: Quản lý xếp hạng</h2>
+    <div><a th:href="@{rankByWeek}">Xếp hạng theo tuần</a></div>
+    <div><a th:href="@{rankByMonth}">Xếp hạng theo tháng</a></div>
+    <div><a th:href="@{rankBySemester}">Xếp hạng theo học kỳ</a></div>
+    <div><a th:href="@{rankByYear}">Xếp hạng theo năm</a></div>
+    <br>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
 <div class="modal-loading"></div>
