add function edit in table for rankByWeek

--- a/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
@@ -45,6 +45,7 @@
         </div>
         <div class="table-title-2">
             <div class="col-sm-6 d-flex justify-content-end align-items-center">
+                <input type="button" class="btn btn-success" id="editGrades" value="Sửa điểm"/>
                 <a href="#editRank" class="btn btn-success" data-toggle="modal">
                     <span>Sửa xếp hạng tuần</span>
                 </a>
@@ -53,7 +54,7 @@
                 </a>
             </div>
         </div>
-        <table class="table table-hover">
+        <table class="table table-hover table-edit">
             <thead>
             <tr class="align-items-center">
                 <th>Lớp</th>
@@ -68,37 +69,37 @@
             <tbody>
             <tr>
                 <td>10 Toán</td>
-                <td>20</td>
-                <td>20</td>
-                <td>0.2</td>
-                <td>0.2</td>
+                <td contenteditable="false">20</td>
+                <td contenteditable="false">20</td>
+                <td contenteditable="false">0.2</td>
+                <td contenteditable="false">0.2</td>
                 <td>40.4</td>
                 <td><b>1</b></td>
             </tr>
             <tr>
                 <td>10 Tin</td>
-                <td>20</td>
-                <td>20</td>
-                <td>0.2</td>
-                <td>0.2</td>
+                <td contenteditable="false">20</td>
+                <td contenteditable="false">20</td>
+                <td contenteditable="false">0.2</td>
+                <td contenteditable="false">0.2</td>
                 <td>40.4</td>
                 <td><b>1</b></td>
             </tr>
             <tr>
                 <td>10 Lý</td>
-                <td>20</td>
-                <td>20</td>
-                <td>0.2</td>
-                <td>0.1</td>
+                <td contenteditable="false">20</td>
+                <td contenteditable="false">20</td>
+                <td contenteditable="false">0.2</td>
+                <td contenteditable="false">0.1</td>
                 <td>40.3</td>
                 <td><b>3</b></td>
             </tr>
             <tr>
                 <td>10 Hóa</td>
-                <td>20</td>
-                <td>18</td>
-                <td>0.2</td>
-                <td>0.2</td>
+                <td contenteditable="false">20</td>
+                <td contenteditable="false">18</td>
+                <td contenteditable="false">0.2</td>
+                <td contenteditable="false">0.2</td>
                 <td>38.4</td>
                 <td><b>4</b></td>
             </tr>
