--- a/project/src/main/resources/templates/editViolation.html
+++ b/project/src/main/resources/templates/editViolation.html
@@ -33,13 +33,14 @@
                 </select>
             </div>
             <div class="input-info">
-                <label for="description">Mô tả vi phạm</label>
-                <input class="basic-slide" id="description" type="text" value=""/>
-            </div>
-            <div class="input-info">
                 <label for="substractGrade">Điểm trừ</label>
                 <input class="basic-slide" id="substractGrade" type="number" value=""/>
             </div>
+            <div class="input-info align-items-start">
+                <label for="description">Mô tả vi phạm</label>
+                <textarea class="basic-slide" id="description" rows="3"></textarea>
+            </div>
+
             <div class="error violation-err"></div>
             <div class="text-center">
                 <button type="button" class="btn btn-customer" id="editInfo">CHỈNH SỬA</button>
