--- a/project/src/main/resources/templates/violationListOfClass.html
+++ b/project/src/main/resources/templates/violationListOfClass.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
 
-            <div class="totals">
+            <div class="totals-footer">
                 <div class="totals-item">
                     <label>Tổng điểm trừ</label>
                     <div class="totals-value" id="cart-subtotal">0.4</div>
@@ -104,6 +104,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">
+                    <p class="font-500">Thứ 2 - 07/06/2020 - Lớp 10 Tin</p>
                     <table class="table">
                         <thead>
                         <th>Mô tả lỗi</th>
@@ -126,13 +127,13 @@
                         </tr>
                         <tr>
                             <td colspan="4">
-                                <input type="text" class="form-control text-red" id="violation"
-                                       placeholder="Ghi chú lỗi...">
+                                <span class="font-500">Ghi chú: </span><span class="text-red">A và B đi lại lộn xộn trong lớp</span>
                             </td>
                         </tr>
                         </tbody>
                     </table>
-                    <div class="search-line ml-3">
+                    <div class="form-group ml-3">
+                        <label for="reason">Lý do: </label>
                         <textarea type="text" class="form-control" id="reason" placeholder="Lý do.."></textarea>
                     </div>
                 </div>
