--- a/project/src/main/resources/templates/addViolationType.html
+++ b/project/src/main/resources/templates/addViolationType.html
@@ -34,7 +34,7 @@
                         <input type="text" class="form-control" id="description" placeholder="Mô tả vi phạm">
                     </div>
                     <div class="form-group text-left">
-                        <label for="totalGrade">Điểm trừ <span class="text-red">*</span></label>
+                        <label for="totalGrade">Điểm <span class="text-red">*</span></label>
                         <input type="number" class="form-control" id="totalGrade" placeholder="1">
                     </div>
                     <div class="error addViolationType-err text-left"></div>
