--- a/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
@@ -37,7 +37,23 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-xl-6 d-inline-block"></div>
+                <div class="col-xl-2 d-inline-block"></div>
+                <div class="col-xl-4 d-inline-block">
+                    <div class="search-line">
+                        <span>Sắp xếp theo</span>
+                        <select class="combobox searchable" id="orderBY">
+                            <option value="0" selected="selected">Lớp</option>
+                            <option value="1">Xếp hạng</option>
+                        </select>
+                    </div>
+                    <div class="search-line">
+                        <span>Thứ tự</span>
+                        <select class="combobox searchable" id="sortBy">
+                            <option value="0">Giảm dần</option>
+                            <option value="1" selected="selected">Tăng dần</option>
+                        </select>
+                    </div>
+                </div>
                 <div class="d-inline-block ml-2">
                     <button class="btn btn-search" id="search">Tìm kiếm</button>
                 </div>
@@ -69,7 +85,7 @@
             <tbody>
             <tr>
                 <td>10 Toán</td>
-                <td contenteditable="false">20</td>
+                <td>20</td>
                 <td contenteditable="false">20</td>
                 <td contenteditable="false">0.2</td>
                 <td contenteditable="false">0.2</td>
@@ -78,7 +94,7 @@
             </tr>
             <tr>
                 <td>10 Tin</td>
-                <td contenteditable="false">20</td>
+                <td>20</td>
                 <td contenteditable="false">20</td>
                 <td contenteditable="false">0.2</td>
                 <td contenteditable="false">0.2</td>
@@ -87,7 +103,7 @@
             </tr>
             <tr>
                 <td>10 Lý</td>
-                <td contenteditable="false">20</td>
+                <td>20</td>
                 <td contenteditable="false">20</td>
                 <td contenteditable="false">0.2</td>
                 <td contenteditable="false">0.1</td>
@@ -96,7 +112,7 @@
             </tr>
             <tr>
                 <td>10 Hóa</td>
-                <td contenteditable="false">20</td>
+                <td>20</td>
                 <td contenteditable="false">18</td>
                 <td contenteditable="false">0.2</td>
                 <td contenteditable="false">0.2</td>
@@ -121,50 +137,50 @@
                 <div class="modal-body px-5">
                     <div class="search-line">
                         <span>Tên tuần <span class="text-red">*</span></span>
-                        <input type="text" id="weekName" class="searchable" placeholder="Tuần 16"/>
+                        <input type="text" id="weekName" class="searchable" placeholder="16"/>
                     </div>
                     <div class="form-group text-left">
                         <h6>Các ngày áp dụng <span class="text-red">*</span></h6>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 2</label>
+                                <label>Thứ 2 - Ngày 06/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 3</label>
+                                <label>Thứ 3 - Ngày 07/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 4</label>
+                                <label>Thứ 4 - Ngày 08/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 5</label>
+                                <label>Thứ 5 - Ngày 09/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 6</label>
+                                <label>Thứ 6 - Ngày 10/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 7</label>
+                                <label>Thứ 7 - Ngày 11/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Chủ nhật</label>
+                                <label>Chủ nhật - Ngày 12/07/2020</label>
                             </span>
                         </div>
 
@@ -209,50 +225,50 @@
                 <div class="modal-body px-5">
                     <div class="search-line">
                         <span>Tên tuần <span class="text-red">*</span></span>
-                        <input type="text" id="newWeekName" class="searchable" placeholder="Tuần 16"/>
+                        <input type="text" id="newWeekName" class="searchable" placeholder="16"/>
                     </div>
                     <div class="form-group text-left">
                         <h6>Các ngày áp dụng <span class="text-red">*</span></h6>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 2</label>
+                                <label>Thứ 2 - Ngày 06/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 3</label>
+                                <label>Thứ 3 - Ngày 07/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 4</label>
+                                <label>Thứ 4 - Ngày 08/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 5</label>
+                                <label>Thứ 5 - Ngày 09/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 6</label>
+                                <label>Thứ 6 - Ngày 10/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Thứ 7</label>
+                                <label>Thứ 7 - Ngày 11/07/2020</label>
                             </span>
                         </div>
                         <div class="form-check text-left">
                             <span class="custom-checkbox">
                                 <input type="checkbox" name="options">
-                                <label>Chủ nhật</label>
+                                <label>Chủ nhật - Ngày 12/07/2020</label>
                             </span>
                         </div>
 
