fix bug textarea

--- a/project/src/main/resources/templates/editViolation.html
+++ b/project/src/main/resources/templates/editViolation.html
@@ -38,7 +38,7 @@
             </div>
             <div class="input-info align-items-start">
                 <label for="description">Mô tả vi phạm</label>
-                <textarea class="basic-slide" id="description" rows="3"></textarea>
+                <textarea class="basic-slide" id="description" rows="3" value=""></textarea>
             </div>
 
             <div class="error violation-err"></div>
